force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/tc9_pr__Employment_Cost_Item__c.object-meta.xml
<CustomObject>
    <description>Maintains costs associated with the Employment of Employees on a per Employment Cost basis</description>
    <label>Employment Cost Item</label>
    <nameField>
        <displayFormat>ECI-{0000000000}</displayFormat>
        <label>Employment Cost Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Cost Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>