force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_core__Agreement__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Employment Cost Item to an Agreement.</description>
    <inlineHelpText>Relates the Employment Cost Item to an Agreement.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>tc9_core__Agreement__c</referenceTo>
    <relationshipLabel>Employment Cost Items</relationshipLabel>
    <relationshipName>Employment_Cost_Items</relationshipName>
    <type>Lookup</type>
</CustomField>