force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_core__Employment_Cost_Selection__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Employment_Cost_Selection__c</fullName>
    <description>Specifies which Employment Costs are included in the calculation when the Agreements Rates Calculator processes percentage-based Employment Cost Items.</description>
    <inlineHelpText>Specifies which Employment Costs are included in the calculation when the Agreements Rates Calculator processes percentage-based Employment Cost Items.</inlineHelpText>
    <label>Employment Cost Selection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_core__Assignment_Rate_Mapping</valueSetName>
    </valueSet>
</CustomField>