force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_core__Job_Role__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Job Role to the Employment Cost Item. This relationship is used by the Agreements Rate Calculator to determine job role–specific employment costs.</description>
    <inlineHelpText>Relates the Job Role to the Employment Cost Item. This relationship is used by the Agreements Rate Calculator to determine job role–specific employment costs.</inlineHelpText>
    <label>Job Role</label>
    <referenceTo>tc9_core__Job_Role__c</referenceTo>
    <relationshipLabel>Employment Cost Items</relationshipLabel>
    <relationshipName>Employment_Cost_Items</relationshipName>
    <type>Lookup</type>
</CustomField>