force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_et__ECM_System_Info__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__ECM_System_Info__c</fullName>
    <description>To hold date data required for processes within the Employment Cost Manager</description>
    <inlineHelpText>To hold date data required for processes within the Employment Cost Manager</inlineHelpText>
    <label>ECM System Info</label>
    <type>Date</type>
</CustomField>