force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_et__Invoiceable_Calculated_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoiceable_Calculated_Based_On__c</fullName>
    <description>Defines what the value calculated as the Invoice Rate is based on</description>
    <inlineHelpText>Defines what the value calculated as the Invoice Rate is based on</inlineHelpText>
    <label>Invoiceable Calculated Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoiceable_Calculated_Based_On_Picklist</valueSetName>
    </valueSet>
</CustomField>