force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_et__Last_Date_Rate_Calc_Update_Completed__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Date_Rate_Calc_Update_Completed__c</fullName>
    <description>The last date/time the Employment Cost Item was applied to a Rate Calculator from the ECM.</description>
    <inlineHelpText>The last date/time the Employment Cost Item was applied to a Rate Calculator from the ECM.</inlineHelpText>
    <label>Last Date Rate Calc Update Completed</label>
    <type>DateTime</type>
</CustomField>