force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_et__Rate_Calculator_Cost_Item_Tem__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator_Cost_Item_Tem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Calculator Cost Item Tem</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Rate_Calculator_Employment_Cost_Item</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Employment Cost Items</relationshipLabel>
    <relationshipName>Employment_Cost_Items</relationshipName>
    <type>Lookup</type>
</CustomField>