force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_et__Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Risk_Classification__c</fullName>
    <description>The Risk Classification that the Employment Cost Item applies. If left blank the Employment Cost will apply to all Risk Classifications</description>
    <inlineHelpText>The Risk Classification that the Employment Cost Item applies. If left blank the Employment Cost will apply to all Risk Classifications</inlineHelpText>
    <label>Risk Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Risk_Classification_Picklist</valueSetName>
    </valueSet>
</CustomField>