force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The Date the Employment Cost Item with come into effect</description>
    <inlineHelpText>The Date the Employment Cost Item with come into effect</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>