force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Employment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employment_Cost__c</fullName>
    <description>The Employment Cost associated with the Employment Cost Item</description>
    <inlineHelpText>The Employment Cost associated with the Employment Cost Item</inlineHelpText>
    <label>Employment Cost</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>tc9_pr__Employment_Cost__c.RecordTypeId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Employment_Cost__c</referenceTo>
    <relationshipLabel>Employment Cost Items</relationshipLabel>
    <relationshipName>Employment_Cost_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>