force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Industry__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Industry__c</fullName>
    <description>The Industry that the Employment Cost Item applies. If left blank, the Employment Cost will apply to all Industries</description>
    <inlineHelpText>The Industry that the Employment Cost Item applies. If left blank, the Employment Cost will apply to all Industries</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Industry_Picklists</valueSetName>
    </valueSet>
</CustomField>