force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Location associated with the Employment Cost Item. If a Parent Location is selected, the Employment Cost Item will apply to all the Locations child records. If left blank, the Employment Cost will apply to all Locations</description>
    <inlineHelpText>The Location associated with the Employment Cost Item. If a Parent Location is selected, the Employment Cost Item will apply to all the Locations child records. If left blank, the Employment Cost will apply to all Locations</inlineHelpText>
    <label>Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Employment Cost Items</relationshipLabel>
    <relationshipName>Employment_Cost_Items</relationshipName>
    <type>Lookup</type>
</CustomField>