force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Payable_Calculated_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payable_Calculated_Based_On__c</fullName>
    <description>Defines what value the amount payable will be based on</description>
    <inlineHelpText>Defines what value the amount payable will be based on</inlineHelpText>
    <label>Payable Calculated Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Payable_Calculated_Based_On_Picklists</valueSetName>
    </valueSet>
</CustomField>