force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/fields/tc9_pr__Payable_Calculation_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payable_Calculation_Rate__c</fullName>
    <description>Defines what rate that will be used in calculating the amount payable</description>
    <inlineHelpText>Defines what rate that will be used in calculating the amount payable</inlineHelpText>
    <label>Payable Calculation Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>