force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/recordTypes/tc9_core__Agreement_Cost.recordType-meta.xml
<RecordType>
    <fullName>tc9_core__Agreement_Cost</fullName>
    <active>true</active>
    <description>To be used for Agreement Costs.</description>
    <label>Agreement Cost</label>
</RecordType>