force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/recordTypes/tc9_et__Superannuation.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Superannuation</fullName>
    <active>true</active>
    <label>Superannuation</label>
</RecordType>