force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/recordTypes/tc9_pr__Payroll_Tax.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payroll_Tax</fullName>
    <active>true</active>
    <description>To be used for Employment Cost Items associated with Payroll Tax</description>
    <label>Payroll Tax</label>
</RecordType>