force-app/main/default/objects/tc9_pr__Employment_Cost_Item__c/recordTypes/tc9_pr__WorkCover.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__WorkCover</fullName>
    <active>true</active>
    <description>To be used for Employment Cost Items associated with WorkCover</description>
    <label>WorkCover</label>
</RecordType>